updated readme and fixed a bug

--- a/htmls/about.html
+++ b/htmls/about.html
@@ -9,9 +9,9 @@
 </head>
 <body>
     <header>
-        <h1><a href="../home.html">shinemettd</a></h1>
+        <h1><a href="../index.html">shinemettd</a></h1>
         <nav>
-            <p><a href="../home.html">HOME</a></p>
+            <p><a href="../index.html">HOME</a></p>
             <p class="selected"><a href="../htmls/about.html">ABOUT</a></p>
             <p><a href="../htmls/resume.html">RESUME</a></p>
             <p><a href="../htmls/works.html">WORKS</a></p>
